--- a/.env
+++ b/.env
@@ -31,3 +31,4 @@ APP_SECRET=6c0f574a4312997d6898f4691a5e1771
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/AgenceImmoLievin?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+IMAGES_URL=/build/images/
