--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "cropper": "^4.1.0",
         "jquery": "^3.4.1"
     }
 }
