--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "kartik-v/bootstrap-fileinput": "^5.0",
         "knplabs/knp-paginator-bundle": "^5.1",
         "liip/imagine-bundle": "^2.3",
+        "ramsey/uuid": "^3.9",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.0.*",
