--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@fortawesome/fontawesome-free": "^5.12.1",
         "bootstrap-fileinput": "kartik-v/bootstrap-fileinput",
         "cropper": "^4.1.0",
-        "jquery": "^3.4.1"
+        "jquery": "^3.4.1",
+        "jquery-ui": "^1.12.1",
+        "webpack-jquery-ui": "^2.0.1"
     }
 }
